--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="action_settings">Settings</string>
     <string name="añadir">añadir</string>
     <string name="google_maps_key" templateMergeStrategy="preserve"
-            translatable="false">AIzaSyAj-Y2Hp4AyTSx-TW4wlei03XukAmS24kA
+            translatable="false">YOUR_API_KEY
     </string>
     <string name="actualizar">Actualizar</string>
     <string name="search_hint">Nombre Restaurante</string>
